# plugin_examples

./: .gitignore  CMakeLists.txt  pickup_base.hpp
client/: CMakeLists.txt  ls_compile_time_pickups.cc  main.cc
compile_time/: CMakeLists.txt
compile_time/include/compile_time/: pickup_base.hpp  registration_macro.hpp
compile_time/src/: more_pickups.cc  pickup_base.cc  pickups.cc
compile_time/src/pickups/: CMakeLists.txt  health.cc  lightning.cc  oil.cc
